navbar: make logo clickable to go to dashboard

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -69,6 +69,12 @@
   background-color: #444;
 }
 
+.logo-link {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
 @media (min-width: 769px) {
   .navbar-content {
     flex-wrap: nowrap;
